--- a/app/views/cos-csv/csv-help.html
+++ b/app/views/cos-csv/csv-help.html
@@ -120,12 +120,12 @@ href: "#"
         <section class="govuk-!-margin-top-7 opss-grouping">
 
             <h3 class="govuk-heading-s opss-grouping__heading-s">
-                Template 2: concentration ranges
+                Template 2: exact concentrations with shades
             </h3>
 
             <p class="govuk-body-s">
-                For ingredients with concentration <span class="govuk-!-font-weight-bold">ranges</span> follow
-                Template 2. <br class="opss-br-desktop">(Use Template 3, if any ingredients use shades).
+                For ingredients with <span class="govuk-!-font-weight-bold">exact</span> concentrations and ingredients
+                which use <span class="govuk-!-font-weight-bold">shades</span> follow Template 2.
             </p>
 
             <p class="govuk-body-s">
@@ -137,16 +137,34 @@ href: "#"
         <section class="govuk-!-margin-top-7 opss-grouping">
 
             <h3 class="govuk-heading-s opss-grouping__heading-s">
-                Template 3: concentration ranges with shades
+                Template 3: exact concentrations and ingredients
+                which use <span class="govuk-!-font-weight-bold">shades</span>
             </h3>
 
             <p class="govuk-body-s">
-                For ingredients with concentration <span class="govuk-!-font-weight-bold">ranges</span> and ingredients
-                which use <span class="govuk-!-font-weight-bold">shades</span> follow Template 3.
+                For ingredients with concentration <span class="govuk-!-font-weight-bold">ranges</span> follow
+                Template 3.
             </p>
 
             <p class="govuk-body-s">
                 Template 3 functionality will eventually be available later in 2023.
+            </p>
+
+        </section>
+
+        <section class="govuk-!-margin-top-7 opss-grouping">
+
+            <h3 class="govuk-heading-s opss-grouping__heading-s">
+                Template 4: concentration ranges with shades
+            </h3>
+
+            <p class="govuk-body-s">
+                For ingredients with concentration <span class="govuk-!-font-weight-bold">ranges</span> and ingredients
+                which use <span class="govuk-!-font-weight-bold">shades</span> follow Template 4.
+            </p>
+
+            <p class="govuk-body-s">
+                Template 4 functionality will eventually be available later in 2023.
             </p>
 
         </section>
