--- a/app/views/cos-csv/csv-help.html
+++ b/app/views/cos-csv/csv-help.html
@@ -137,8 +137,7 @@ href: "#"
         <section class="govuk-!-margin-top-7 opss-grouping">
 
             <h3 class="govuk-heading-s opss-grouping__heading-s">
-                Template 3: exact concentrations and ingredients
-                which use <span class="govuk-!-font-weight-bold">shades</span>
+                Template 3: concentration ranges
             </h3>
 
             <p class="govuk-body-s">
