--- a/app/views/cos-csv/csv-upload-refresh.html
+++ b/app/views/cos-csv/csv-upload-refresh.html
@@ -23,7 +23,7 @@ href: "#"
         <h3 class="govuk-notification-banner__heading">
             The file has not finished uploading
         </h3>
-        <p class="govuk-body">The <abbr>CSV</abbr> file might take a few moments to upload. Try refreshing the page.</p>
+        <p class="govuk-body">After a few moments try refreshing the page.</p>
     </div>
 </div>
 
