--- a/app/views/cos-csv/csv-help.html
+++ b/app/views/cos-csv/csv-help.html
@@ -16,7 +16,7 @@ href: "#"
 
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
+    <div class="govuk-grid-column-two-thirds">
 
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
             <!--abbr>CSV</abbr> file uploads for ingredients &ndash; help-->
