--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -127,6 +127,25 @@ main a.govuk-link:hover {
     }
 }
 
+.opss-font-size-14,
+.govuk-\!-font-size-14 {
+    /* future proof the 14px which is required for legacy dashboard designs*/
+    font-size: 12px !important;
+    font-size: .75rem !important;
+    line-height: 1.25 !important
+}
+
+@media (min-width: 40.0625em) {
+
+    /* future proof the 14px which is required for legacy dashboard designs*/
+    .opss-font-size-14,
+    .govuk-\!-font-size-14 {
+        font-size: 14px !important;
+        font-size: .875rem !important;
+        line-height: 1.4285714286 !important
+    }
+}
+
 .opss-nojs-hide {
     display: none;
 }
