--- a/app/views/cos-csv/csv-help.html
+++ b/app/views/cos-csv/csv-help.html
@@ -83,7 +83,7 @@ href: "#"
                 </li>
             </ol>
 
-            <p class="govuk-body-s">Requirements:</p>
+            <p class="govuk-body-s govuk-!-font-weight-bold">Requirements:</p>
 
             <ul class="govuk-list govuk-list--bullet govuk-!-font-size-16">
                 <li>Each ingredient has 4 delimited (comma separated) fields</li>
@@ -103,7 +103,7 @@ href: "#"
                 <!--li>No values can contain commas</li-->
             </ul>
 
-            <p class="govuk-body-s">For example:</p>
+            <p class="govuk-body-s govuk-!-font-weight-bold">For example:</p>
 
             <code>
                 Ingredient name 1,35,30,497-19-8,false<br>
