--- a/app/views/cos-csv/csv-help.html
+++ b/app/views/cos-csv/csv-help.html
@@ -40,7 +40,11 @@ href: "#"
         </p>
 
         <p class="govuk-body">
-            If you have added ingredient information by using a <abbr>CSV</abbr> file you can still edit the ingredients manually or add and remove ingredients manually while the notification is in a draft status. To edit the ingredient information, begin the same task again and choose to enter ingredients manually.
+            If you have added ingredient information by using a <abbr>CSV</abbr> file, you can still edit the ingredients manually or add and remove ingredients manually while the notification is in a draft status. To edit the ingredient information, begin the same task again and choose to enter ingredients manually.
+        </p>
+
+        <p class="govuk-body">
+            This upload functionality can be useful when tasked with creating several notifications which all include a common set of ingredients.
         </p>
 
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
@@ -86,8 +90,8 @@ href: "#"
             <p class="govuk-body-s govuk-!-font-weight-bold">Requirements:</p>
 
             <ul class="govuk-list govuk-list--bullet govuk-!-font-size-16">
-                <li>Each ingredient has 4 delimited (comma separated) fields</li>
                 <li>Each ingredient is listed on its own (data) row</li>
+                <li>Each ingredient has 4 delimited (comma separated) fields</li>
                 <li>The file name extention is .<abbr>csv</abbr></li>
                 <li>An ingredient name is always required and there must be no duplication of ingredient names
                 </li>
