--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -130,7 +130,7 @@ $opss-retired-bg: govuk-tint(govuk-colour("light-grey"), 50);
     }
 
     .opss-panels__single {
-        /*width: 100%; */
+        width: 100%;
         padding-bottom: govuk-spacing(2);
         margin-top: - govuk-spacing(4);
         margin-bottom: govuk-spacing(2);
