--- a/app/views/psd-revised-flow/help-how-to-use-psd.html
+++ b/app/views/psd-revised-flow/help-how-to-use-psd.html
@@ -18,7 +18,7 @@ Help - How to use the Product Safety Database
 
 
         <p class="govuk-body govuk-!-margin-bottom-6 opss-secondary-text">
-            An introduction to how to use the Product Safety Database (<abbr>PSD</abbr>).
+            An introduction on how to use the Product Safety Database (<abbr>PSD</abbr>) online digital service.
         </p>
 
     </div>
@@ -43,7 +43,11 @@ Help - How to use the Product Safety Database
             </div>
 
             <p class="govuk-body">
-                Cases record information about allegations, evidence, and corrective actions. A product record describes the product and is included within a case. The same product record can now be included within many different cases.
+                Cases record information about allegations, evidence, and corrective actions. A product record describes the product and is included within a case.
+            </p>
+
+            <p class="govuk-body">
+                The same product record can now be included within many different cases.
             </p>
 
         </div>
@@ -65,66 +69,137 @@ Help - How to use the Product Safety Database
                         <a href="#content-01" class="govuk-link govuk-link--no-visited-state">Overview</a>
                     </li>
                     <li>
-                        <a href="#content-02" class="govuk-link govuk-link--no-visited-state">Creating a case</a>
+                        <a href="#content-02" class="govuk-link govuk-link--no-visited-state">Create a case</a>
                     </li>
                     <li>
-                        <a href="#content-03" class="govuk-link govuk-link--no-visited-state">Finding a case</a>
+                        <a href="#content-03" class="govuk-link govuk-link--no-visited-state">Find a case</a>
                     </li>
                     <li>
-                        <a href="#content-04" class="govuk-link govuk-link--no-visited-state">link text</a>
+                        <a href="#content-04" class="govuk-link govuk-link--no-visited-state">Edit or close a case</a>
+                    </li>
+
+                    <li>
+                        <a href="#content-0xxxxxx" class="govuk-link govuk-link--no-visited-state">Finding information about products and cases</a>
                     </li>
                 </ol>
             </nav>
         </aside>
 
-        <section>
-            <h3 class="govuk-heading-m" id="content-01">Overview</h3>
 
+        <h3 class="govuk-heading-m" id="content-01">Overview</h3>
+
+        <p class="govuk-body">
+            The two main areas within the <abbr>PSD</abbr> online service are the cases area and the products area. These are accessed using the main navigation menu (towards the top<span class="govuk-visually-hidden">/start</span> of each page).
+        </p>
+
+        <p class="govuk-body">
+            In the <span class="govuk-!-font-weight-bold">cases area</span> you can find cases you or your team have created or search the entire database of cases. A case is what ultimately reports unsafe, noncompliant and serious risk products to <span title="Department for Business, Energy and Industrial Strategy">BEIS</span>/<abbr title="Office for Product Safety and Standards">OPSS</abbr> and includes relevant information such as importer contact details, product batch numbers, test reports and corrective actions.
+        </p>
+
+        <p class="govuk-body">
+            When a case is created, information and assets (such as accidents or incidents, reports and evidence images) can be added directly to the case. But the basic information describing a product is added to a case by including a product record. A product record is what contains the basic information about the product.
+        </p>
+
+        <div class="govuk-inset-text">
+            The basic information about a product is added to a case by including a product record. In the <abbr>PSD</abbr> a case and a product record are two seperate entities.
+        </div>
+
+        <p class="govuk-body">
+            In the <span class="govuk-!-font-weight-bold">products area</span> you can find the product records which are included in your cases or search the entire database of product records. A product record only contains information about a product and doesn't include case information. A single product record can be included within many cases.
+        </p>
+
+
+        <h3 class="govuk-heading-m govuk-!-margin-top-8" id="content-02">
+            2. Create a case
+        </h3>
+
+        <p class="govuk-body">
+            The process of creating a case starts from a product record. A case needs to include &ndash; or link to &ndash; at least one product record. This is made easy by first searching for a product within the products area.
+        </p>
+
+        <div class="govuk-inset-text">
+            <ol class="govuk-list govuk-list--number govuk-list--spaced">
+                <li>In the products area, search for a product using the 'All products &ndash; Search' option<a href="#findproduct" class="govuk-link govuk-link--no-visited-state govuk-link--no-underline opss-secondary-text"><sup class="opss-font-size-14">*</sup></a></li>
+                <li>Open a product record to view it</li>
+                <li>Select the 'Create a new case for this product' option</li>
+                <li>Then follow the on-screen steps to create the case</li>
+            </ol>
+        </div>
+
+        <p class="govuk-body">
+            <sup id="findproduct">*</sup>If a product record describing the product does not already exist, you can create a new product record for the product.
+        </p>
+
+        <p class="govuk-body">
+            When you have finished the process of creating a case, the product record will automatically be included within the new case. The new case can be found in the cases area, where you can <span class="govuk-!-font-weight-bold">continue adding further information and assets to the case</span>.
+        </p>
+
+        <p class="govuk-body">
+            When you create a case, you and your team are the case owners.
+        </p>
+
+        <h3 class="govuk-heading-m govuk-!-margin-top-8" id="content-03">
+            3. Find a case
+        </h3>
+
+        <div class="govuk-inset-text">
             <p class="govuk-body">
-                The two main areas within the <abbr>PSD</abbr> online service are the cases area and the products area. These are accessed using the main navigation menu (towards the top<span class="govuk-visually-hidden">/start</span> of each page).
+                In the cases area, the secondary navigation menu <span class="opss-remove-from-desktop">(on the left)</span> provides three ways to find a case:
             </p>
 
+            <ol class="govuk-list govuk-list--number govuk-list--spaced">
+                <li>'My cases', lists all your open cases</li>
+                <li>'Team cases', lists all your team's open cases</li>
+                <li>'All cases &ndash; Search', is where you can search all cases in the <abbr>PSD</abbr></li>
+            </ol>
+        </div>
+
+        <p class="govuk-body">
+            You can apply filters to search results to reduce how many product records are returned in a search.
+        </p>
+
+        <p class="govuk-body">
+            Select a case name in any list to open the main case page for the case.
+        </p>
+
+        <h3 class="govuk-heading-m govuk-!-margin-top-8" id="content-04">
+            4. Edit or close a case
+        </h3>
+
+        <p class="govuk-body">
+            When you view a case the secondary navigation menu <span class="opss-remove-from-desktop">(on the left)</span> presents the case information in logical groups and across different pages. If you are a member of the team which owns the case, or you have been granted editing permission, the case pages provide 'edit', 'add', 'remove' or 'change' options throughout all the pages relating to the case.
+        </p>
+
+        <div class="govuk-inset-text">
             <p class="govuk-body">
-                In the <span class="govuk-!-font-weight-bold">cases area</span> you can find cases you or your team have created or search the entire database of all cases. A case is what reports unsafe, noncompliant and serious risk products to <span title="Department for Business, Energy and Industrial Strategy">BEIS</span> and includes relevant information such as importer contact details, product batch numbers, test reports and corrective actions.
+                You cannot edit or close a case if you do not have editing permission for the case.
             </p>
+        </div>
 
-            <p class="govuk-body">
-                When a case is created, information and assets (such as accidents or incidents, reports and evidence images) can be directly added to the case. But the basic information describing a product is added to a case by including a product record. A product record is what contains the basic information about the product.
-            </p>
+        <p class="govuk-body">
+            On the main case page for a case, the team which owns the case can add other teams to the case and grant them editing permission. (Select 'Change' in the 'Teams added' row).
+        </p>
 
-            <div class="govuk-inset-text">
-                The basic information about a product is added to a case by including a product record.
-            </div>
+        <p class="govuk-body">
+            If your team owns the case, or you have editing permission, you can <span class="govuk-!-font-weight-bold opss-no-wrap">close a case</span> by selecting the 'Close case' option on the main case page for a case.
+        </p>
 
-            <p class="govuk-body">
-                In the <span class="govuk-!-font-weight-bold">products area</span> you can find the product records which are included in your cases or search the entire database of all product records. A product record only contains information about a product and doesn't include case information. A single product record can be included within many cases.
-            </p>
+        <h3 class="govuk-heading-m govuk-!-margin-top-8" id="content-05">
+            5. Notify the <abbr>OPSS</abbr> <!-- why not beis ?-->
+        </h3>
 
-            <p class="govuk-body">
-                When you view a product record you can see all the cases which have included it.
-            </p>
+        <p class="govuk-body">
+            If, or when, you want to notify the <abbr>OPSS</abbr> using your <abbr>PSD</abbr> case, you must add the <abbr>OPSS</abbr> Incident Management Team (<abbr>IMT</abbr>) to the case or make them the case owner.
+        </p>
 
+        <p class="govuk-body">
+            To do this ....
+            On the main case page for a case, ....
+        </p>
 
-            <!-- Does closing a case notify? What currently technically happens? -->
-
-        </section>
-
-        <section>
-            <h3 class="govuk-heading-m" id="content-02">Creating a case</h3>
-
-            <p class="govuk-body">
-                A case will need to include &ndash; or link to &ndash; at least one product record. This is made easy by first searching for the product within the products area. When you find it, select the 'Create a new case for this product' option, which will begin the process of creating a case and will automatically include the product record within it. If a product record describing the product does not already exist, then you can create a product record.
-            </p>
-
-            <p class="govuk-body">
-                A case will need to link to a product record. This is made easy by first searching for the product within the products area.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic cum modi dolores totam beatae deleniti quisquam possimus in, obcaecati, consequuntur illo suscipit voluptatum quaerat veniam tempore culpa voluptatem optio dolorem!
-            </p>
-
-            <h3 class="govuk-heading-m" id="content-03">Finding a case</h3>
-
-
-        </section>
+        <p class="govuk-body">
+            For guidence on when or why you notify the <abbr>OPSS</abbr> see 'How to notify <abbr>OPSS</abbr>' on the <a href="#" class="govuk-link govuk-link--no-visited-state">xxxxxxx xxxxxx xxxxxxxxx</a> general guidence page.
+        </p>
 
 
     </div>
@@ -148,7 +223,9 @@ Help - How to use the Product Safety Database
 
         <div class="govuk-!-margin-bottom-8 opss-panels__single">
 
-
+            <p class="govuk-body">
+                When you view a product record you can see all the cases which have included it.
+            </p>
 
             <ol class="govuk-list govuk-list--number govuk-list--spaced">
 
